# SenseHub

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.cursor/rules/: coding.mdc
.github/workflows/: rust.yml
androidclient/: settings.gradle.kts
androidclient/app/: build.gradle.kts
androidclient/app/src/androidTest/java/com/example/androidclient/: ExampleInstrumentedTest.kt
androidclient/app/src/main/: AndroidManifest.xml
androidclient/app/src/main/java/com/example/androidclient/: MainActivity.kt  WaveformView.kt
androidclient/app/src/main/res/layout/: activity_main.xml
androidclient/app/src/main/res/navigation/: nav_graph.xml
androidclient/app/src/main/res/values/: strings.xml  themes.xml
androidclient/app/src/main/res/values-night/: themes.xml
androidclient/app/src/main/res/values-v23/: themes.xml
androidclient/gradle/: libs.versions.toml
androidclient/gradle/wrapper/: gradle-wrapper.properties
docs/: audio_buffer_guide.md
documents/: chinese.txt
src/: config.rs  logger.rs  main.rs  plotter.rs  utils.rs
src/app/: app_core.rs  app_events.rs  app_save.rs  mod.rs  sensor_app.rs  state.rs
src/app/handlers/: calibration.rs  data_collection.rs  export.rs  mod.rs
src/app/ui/: export_dialog.rs  history_controls.rs  history_panel.rs  main_panel.rs  mod.rs  status_bar.rs
src/audio/: mod.rs  player.rs
src/database/: handlers.rs  manager.rs  mod.rs  schema.rs  tasks.rs
src/mqtt/: audio_buffer.rs  client.rs  mod.rs
src/types/: audio_data.rs  data_point.rs  mod.rs  results.rs  tasks.rs
(+1 files in other folders)
