[package]
name = "SenseHub"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
eframe = "0.32.1"
egui = "0.32.1"
egui_plot = "0.33.0"
rumqttc = "0.24.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.6"
rand = "0.9"
chrono = "0.4.38"
crossbeam-channel = "0.5"
dotenv = "0.15"
thiserror = "1.0"
base64 = "0.21"

duckdb = { version = "1.3.0", features = ["bundled"] }
toml = "0.8"
